Content being filled slowly

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,6 @@ author = "Martijn Courteaux"
 [params]
   author = "Martijn Courteaux"
   year = "2015"
-  welcome = "My name is **Dirk**. I'm a passionate guitar builder. I'm a student at **CMB Puurs** in my 7th year. On this website, I will showcase my work, which will be mainly guitars and some tools."
+  welcome = "My name is **Dirk**. I'm a passionate guitar builder. I'm a student at **CMB Puurs** where I completed the for years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being Clssical giutars, Steelstring guitars and Electical guitars"
   subtitle = "Handcrafted high-quality guitars"
   email = "dirk.courteaux@gmail.com"
