--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,6 @@ author = "Martijn Courteaux"
 [params]
   author = "Martijn Courteaux"
   year = "2015"
-  welcome = "My name is **Dirk**. I'm a passionate guitar builder. I'm a student at **CMB Puurs** for 7 years now where I completed the 4 years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being **Classical** guitars, **Steelstring** guitars and **Electical** guitars."
+  welcome = "My name is **Dirk**. I'm a passionate guitar builder. I'm a student at **CMB Puurs** for 7 years now where I completed the 4 years training of classical guitar building. This schoolyear (2015-2016) I will finish the steelstring training. On this website, I will showcase my work. There are three divisions being **Classical** guitars, **Steelstring** guitars and **Electrical** guitars."
   subtitle = "Handcrafted high-quality guitars"
   email = "dirk.courteaux@gmail.com"
